--- a/css/styles.css
+++ b/css/styles.css
@@ -146,11 +146,13 @@ h7 a:hover {
 
 /* ======= Wrappers ======= */
 .wrapper1 {
+    position: relative;
     box-shadow: 3px 4px 24px 0px rgba(0, 0, 0, 0.03);
     background: #FFF;
     border-bottom-left-radius: 50% 49px;
     border-bottom-right-radius: 50% 49px;
     padding-bottom: 81px;
+    z-index: 0;
 }
 
 
@@ -174,8 +176,6 @@ h7 a:hover {
     margin-top: -49px;
     background: #f7f7f7;
     padding: 110px 0 105px;
-    border-top-left-radius: -50% 49px;
-    border-top-right-radius: -50% 49px;
 }
 
 .wrapper2__inset1 {
@@ -207,6 +207,7 @@ h7 a:hover {
     border-top-right-radius: 50% 49px;
     border-bottom-left-radius: 50% 49px;
     border-bottom-right-radius: 50% 49px;
+    overflow-x: hidden;
 }
 
 .wrapper4 h2 {
@@ -261,11 +262,24 @@ h7 a:hover {
     position: sticky;
     position: -webkit-sticky;
     z-index: 1;
-    transition: background 250ms ease-in;
+    transition: all 0.5s ease-in;
+    height: 130px;
 }
 
-#header.scroll {
-    background-color: teal;
+#header::before {
+    position: absolute;
+    content: "";
+    display: block;
+    box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.3);
+    background: linear-gradient(27deg, #5CC8FF, #104F55);
+    transition: all 0.5s;
+    width: 100%;
+    height: 100%;
+    transform: translateY(-100%);
+}
+
+#header.scroll::before {
+    transform: translateY(0);
 }
 
 #header .info {
@@ -380,7 +394,7 @@ h7 a:hover {
 
 /* ======= Logo ======= */
 
-.logo {
+#logo {
     display: inline-block;
     padding: 7% 0 0 2%;
 }
@@ -1057,6 +1071,29 @@ h1 a .second {
     background: #66b3ff;
 }
 
+/* ======= Animations on scroll  ======= */
+
+.fade-in {
+    opacity: 0;
+    transform: translateY(50%);
+    transition: all 0.5s ease;
+}
+
+.fade-in.appear {
+    transform: translateY(0);
+    opacity: 1;
+}
+
+.slide-in {
+    opacity: 0;
+    transform: translateX(50%);
+    transition: all 0.5s ease;
+}
+
+.slide-in.appear {
+    transform: translateX(0);
+    opacity: 1;
+}
 
 /* ======= Gallery  ======= */
 .gallery_image a.big-image {
