--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@ a {
     color: inherit;
 }
 
-a:hover {
+a:hover, a:active{
     color: #66b3ff;
 }
 
@@ -362,7 +362,7 @@ h7 a:hover {
     z-index: 2;
 }
 
-.sf-menu li {
+.sf-menu > li {
     opacity: 0;
 }
 
@@ -394,8 +394,11 @@ h7 a:hover {
 
 #logo {
     display: inline-block;
+    position: relative;
+    top: 0;
     padding: 10px 0 0 10px;
-
+    z-index: 1;
+    width: max-content;
 }
 
 h1 a {
@@ -1229,26 +1232,94 @@ h1 a .second {
         -webkit-clip-path: none;
         height: inherit;
         flex-direction: row;
-        justify-content: flex-end;
+        justify-content: center;
         pointer-events: all;
         color: #00284d;
     }
 
-    .sf-menu li {
-        background-color: white;
-        box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.3);
+    .sf-menu > li {
+        position: relative;
+        display: flex;
+        justify-content: center;
+        left: 100px;
         border-radius: 20px;
-        padding: 10px;
-        margin: 50px 1.5%;
+        padding: 47.5px 25px;
         opacity: 1;
     }
-
-    #header.scroll li {
-        color: white;
-        box-shadow: 3px 3px 10px rgba(255, 255, 255, 0.3);
-        background: linear-gradient(21deg, #29335C, #00284d);
+    
+    .dropdown {
+        opacity: 0;
+        position: absolute;
+        overflow: hidden;
+        padding: 20px;
+        top: 0px;
+        border-radius: 2px;
+        transition: all 0.5s ease;
+        transform: translateY(100px);
+        will-change: transform;
+        display: none;
     }
 
+    .dropdown li {
+        width: max-content;
+        padding: 10px 0px;
+    }
+
+    .dropdown li i{
+        color: #00284d;
+        padding: 0px 15px;
+    }
+
+    .dropdown li img {
+        position: relative;
+        top: 2.5px;
+        padding: 0px 10px;
+        height: 20px;
+        width: 30px;
+        object-fit: contain;
+    }
+    
+    .trigger-enter .dropdown {
+        display: block;
+    }
+    
+    .trigger-enter-active .dropdown {
+        opacity: 1;
+    }
+    
+    .dropdownBackground {
+        position: absolute;
+        background-color: #FFF;
+        border-radius: 4px;
+        transition: all 0.3s, opacity 0.1s, translate 0.2s;
+        transform-origin: center -100px;
+        display: flex;
+        justify-content: center;
+        opacity: 0;
+        box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.3);
+    }
+    
+    .dropdownBackground.open {
+        opacity: 1;
+    }
+    
+    .arrow {
+        position: absolute;
+        width: 20px;
+        height: 20px;
+        display: block;
+        background-color: #FFF;
+        transform: translateY(-50%) rotate(45deg);
+        box-shadow: -3px -3px 5px rgba(0, 0, 0, 0.1);
+    }
+
+    #header.scroll .sf-menu > li {
+        color: white;
+    }
+
+    #header.scroll .sf-menu > li li {
+        color: #00284d;
+    }
 
     .box3-wrapper1 {
         grid-template-columns: repeat(4, 200px);
@@ -1297,12 +1368,8 @@ h1 a .second {
 
 
 @media (min-width: 1336px) {
-    .sf-menu {
-        justify-content: center;
-    }
-
-    .sf-menu li {
-        margin: 50px 20px;
+    .sf-menu > li{
+        left: 0;
     }
 
     .img-container {
@@ -1371,3 +1438,4 @@ h1 a .second {
 /* .phone {
     display: block;
 } */
+
