Fixed agreements scroll bug

--- a/css/styles.css
+++ b/css/styles.css
@@ -448,7 +448,7 @@ h1 a .second {
                     CONTENT styles
 =========================================================*/
 #content {
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 
